<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cap7.petfy.AnimalCadastroActivity"
    tools:showIn="@layout/activity_animal_cadastro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_txt_nome"
            android:id="@+id/txt_animal_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_animal_nome"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_txt_nasc"
            android:id="@+id/txt_animal_nasc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_animal_nasc"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_txt_sexo"
            android:id="@+id/txt_animal_sexo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:id="@+id/rd_animal_sexo">
            <RadioButton android:id="@+id/rd_animal_sexo_fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_rd_femea"/>
            <RadioButton android:id="@+id/rd_animal_sexo_masc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_rd_macho"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_txt_especie"
            android:id="@+id/txt_animal_especie" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:id="@+id/rd_animal_especie">
            <RadioButton android:id="@+id/rd_animal_esp_cao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_rd_cachorro"/>
            <RadioButton android:id="@+id/rd_animal_esp_gato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_rd_gato"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_btn_salvar"
            android:id="@+id/btn_animal_salvar"
            android:layout_gravity="center_horizontal"
            android:onClick="onSalvar"/>

    </LinearLayout>
    </ScrollView>




</LinearLayout>
